--- a/packages/ui/styles/theme.css
+++ b/packages/ui/styles/theme.css
@@ -5,7 +5,7 @@
 @layer base {
   :root {
     --background: 0 0% 100%;
-    --background-gray: 0 0% 90%;
+    --gray-background-bg-dark: 0 0% 90%;
     --foreground: 222.2 47.4% 11.2%;
 
     --muted: 210 40% 96.1%;
@@ -191,7 +191,7 @@
   }
 
   body {
-    @apply bg-background-gray text-foreground;
+    @apply bg-gray-background-bg-dark text-foreground;
     font-feature-settings:
       'rlig' 1,
       'calt' 1;
